# solar-map

./: .env  .gitignore  Makefile  README.md  project_summary.md  pyproject.toml  solar_map.html  test_knmi_loader.py
data/: data_cleaner.py
data/processed/: 2024_solar_data_and_coordinates_NL.csv  SP_data.json  radiation_blended_map.csv  radiation_idw.csv  radiation_kriging_exponential.csv  radiation_kriging_gaussian.csv  radiation_kriging_linear.csv  radiation_kriging_spherical.csv  radiation_krigingvar_exponential.csv  radiation_krigingvar_gaussian.csv  radiation_krigingvar_linear.csv  radiation_krigingvar_spherical.csv  radiation_stations.csv  solar_data_and_coordinates_NL.csv
data/raw/: Installed_capacities_per_municipalities_2024_Q2.csv  SP_DATA_NL.csv  SP_data.csv  municipalities.geojson
src/: data_loader.py  knmi_loader.py  main.py  map_generator.py
src/solar_map/: main.py
streamlit_app/: app.py  radiation_dashboard.py
streamlit_app/ui/: legend.py  map.py  sidebar.py
tools/: generate_fake_radiation_stations.py  kriging_idw_blend_example.py  summarize_project.py  summarize_project.py.save
