[tool.poetry]
name = "solar-map"
version = "0.1.0"
description = ""
authors = ["Your Name <victorbarna@hotmail.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = "^2.32.3"
pandas = "^2.2.3"
geopandas = "<1.0"
folium = "^0.19.5"
pathlib = "^1.0.1"
branca = "^0.8.1"
streamlit = "^1.46.0"
streamlit-folium = "^0.25.0"
matplotlib = "<3.10"
shapely = "<2.0"
dotenv = "^0.9.9"
pykrige = "^1.7.2"
scipy = "^1.16.0"
xarray = "^2025.6.1"
netcdf4 = "^1.7.2"

[tool.poetry.scripts]
summarize = "tools.summarize_project:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
